# AutoThreader

./: .env  .env.template  .gitignore  .gitmodules  Dockerfile  compose.yml  main.py  pyproject.toml  readme.md
.github/: .gitignore
